[package]
name = "haste-core"
version = "0.1.0"
authors = ["wayslog <zxs867179@gmail.com>"]
edition = "2018"

[lib]
name="haste_core"
path="src/lib.rs"

[dependencies]
haste-info = { path = "../haste-info" }
grpcio = "0.4"
protobuf = "~2.0"
futures = "0.1"
failure = "0.1"
log = "*"
env_logger = "*"
reqwest = "0.9"
flate2 = "1.0"
tar = "0.4"
tempfile = "3.0"